2006-02-13  Brian Cameron  <brian.cameron@sun.com>

	* config/Xsession.in: Fix calls to zenity so they work.  Fixes
	  bug #330892.
	* README, README.install, docs/C/gdm.xml: Last minute updates
	  before string freeze.

2006-02-10  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c, gui/greeter/greeter_action_language.[ch],
	  gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_events.c,
	  gui/greeter/greeter_session.c, gui/greeter/greeter_system.c:
	  Fix problem with options button and F10 menu not working if the
          button is not in the theme.  This only affects buttons that can
	  be in the F10 button but may not be in the theme (language, 
	  system, session, halt, reboot, shutdown).  Fixes bug #330343.

2006-02-10  Brian Cameron  <brian.cameron@sun.com>

	* README, docs/C/gdm.xml: Few more updates worth adding.

2006-02-10  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Fix bug that was causing gdmflexiserver
	  to fail.  Because we were calling gtk-init when the --command
	  option was being used, and this breaks gdmflexiserver since it
	  is sometimes run with the --command option when there is no 
	  display.
	* README, README.install: Updated with some new features and moved some
          info to docs/C/gdm.xml where the info is more useful.
	* TODO: Updated.
	* configure.ac: Fixed the mess about /usr/opensolaris/bin
	* gui/greeter/greeter_system.c: Do not put tooltips on menus.  They are
          a bad idea and their use is discouraged by the HIG because they break
          a11y.
	* docs/C/gdm.xml: Updated docs with a bunch of information from the 
	  README and README.install file that really belonged in the docs.

2006-02-09  Brian Cameron  <brian.cameron@sun.com>

	A known issue with gdmdynamic is that when a display connects to
	the server it generates the gdmdynamic "ADD" and "RELEASE" commands.
	On startup, hundreds of displays could send these commands at once