@@ -86,7 +86,7 @@ The GDM configuration file /etc/gdm/gdm.conf may be replaced by
 you distribution on upgrade, so if a user wants to ensure that
 configuration changes persist on upgrade, edit the
 /etc/gdm/gdm.conf-custom file.  You can specify a different
-location for the file via the "--with-configdir=/dir" option.
+location for the file via the "--with-defaults-conf=/dir" option.
 This can be useful if you want to put the default file on a
 filesystem shared by multiple machines.
 
