@@ -1,5 +1,4 @@
 ## Process this file with automake to produce makefile.in
-DEFS = @DEFS@ -DGDM_SYSCONFDIR_CONFIG_FILE=\"$(GDM_CONFIGDIR)/gdm.conf\"
 
 # Note that we have cflags for just about everything even if
 # we don't link to everything
