@@ -1076,7 +1076,7 @@ Greeter=/usr/lib/gdmgreeter
 
     <para>
       GDM may be configured to support system-wide configuration if
-      built with the <command>--with-configdir</command> option.  This
+      built with the <command>--with-defaults-conf</command> option.  This
       allows the gdm.conf file to be installed to a directory that can
       be mounted across multiple-systems.  The GDM --config option may
       also be used to specify the configuration file location.  The GDM2
@@ -1348,7 +1348,7 @@ PostSession/
         
       <para>
         GDM may be configured to support system-wide configuration if
-        built with the <command>--with-configdir</command> option.  This
+        built with the <command>--with-defaults-conf</command> option.  This
         allows the <filename>gdm.conf</filename> file to be installed to
         a directory that can be mounted across multiple-systems.  The
         GDM --config option may instead be used to specify a configuration
